# new-connect4-ai

./: .gitignore  .gitmodules  build.sh  configure.bat  configure.sh  run.sh  run_valgrind.sh
src/: CMakeLists.txt  board.cpp  board.hpp  decision_tree.cpp  decision_tree.hpp  enums.hpp  game.cpp  game.hpp  main.cpp  pointer.cpp  pointer.hpp  slot.cpp  slot.hpp  utils.cpp  utils.hpp
